<resources>
    <string name="app_name">Nestali Ljubimci</string>
    <string name="email_text">Email</string>
    <string name="register_as_person">Osoba</string>
    <string name="register_as_shelter">Sklonište</string>
    <string name="password_text">Lozinka</string>
    <string name="phone_text">Broj mobitela</string>
    <string name="shelter_name_text">Naziv skloništa</string>
    <string name="register_text">Registriraj se</string>
    <string name="nestali_ljubimci">Nestali ljubimci</string>
    <string name="profile">Detalji profila</string>
    <string name="message_text">Kako biste nastavili, molimo Vas prijavite se</string>
    <string name="login_text">Prijava</string>
    <string name="guest_text">Nastavi kao gost</string>
    <string name="user_icon">Korisnička ikona</string>
    <string name="log_out">Odjavi se</string>
    <string name="username_text">Korisničko ime</string>
    <string name="last_name_error_message">Prezime treba biti kraće od 50 znakova</string>
    <string name="login_unsuccessful">Prijava neuspješna, molimo Vas pokušajte ponovno.</string>
    <string name="no_pets_image">Nema pronađenih nestalih ljubimaca - ikona</string>
    <string name="logo_text">Nestali ljubimci</string>
    <string name="cat_footprint_description">Slika mačje šape</string>
    <string name="repeat_password_text">Ponovi lozinku</string>
    <string name="first_name_text">Ime</string>
    <string name="last_name_text">Prezime</string>
    <string name="email_error_message">Neispravnan email</string>
    <string name="phone_error_message">Duljina broja telefonaa treba biti između 6 i 15 znamenka</string>
    <string name="first_name_error_message">Duljina imena treba biti između 1 i 50 slova</string>
    <string name="shelter_name_error_message">Duljina imena skloništa treba biti između 1 i 100 slova</string>
    <string name="username_error_message">Duljina korisničkog imena treba biti između 5 i 50 slova</string>
    <string name="password_error_message">Duljina lozinke treba biti veća od 7 znaka</string>
    <string name="passwords_do_not_match">Lozinke se ne podudaraju</string>
    <string name="registration_unsuccessful">Neuspješna registracija. Probajte ponovo!</string>
    <string name="comments">Komentari</string>
    <string name="basicInfo">Osnovne informacije</string>
    <string name="userInfo">Informacije o korisniku</string>
    <string name="username">Korisničko ime:</string>
    <string name="phone">Broj telefona:</string>
    <string name="email">E-mail:</string>
    <string name="missingPetInfo">Informacije o nestanku</string>
    <string name="no_comments_yet">Za sada ne postoji niti jedan komentar.</string>
    <string name="write_a_comment">Napiši komentar</string>
    <string name="add_image">Slika oglasa</string>
    <string name="profile_picture">Slika profila</string>
    <string name="comment_add_fail">Failed to add a comment</string>
    <string name="adds_fetch_fail">Failed to get adds</string>
    <string name="add_comment">Dodaj komentar:</string>
    <string name="location_info">Lokacija je priložena.</string>
    <string name="image_info">Slika je priložena.</string>
    <string name="one_image">Priložena je jedna slika.</string>
    <string name="two_images">Priložene su dvije slike.</string>
    <string name="three_images">Učitali ste maksimalan broj slika.</string>
    <string name="comment">Upiši komentar…</string>
    <string name="comment_submit">Pošalji komentar…</string>
    <string name="advert_submit">Kreiraj oglas…</string>
    <string name="advert_edit">Uredi oglas…</string>
    <string name="add_message_image">Dodaj sliku…</string>
    <string name="add_location">Dodaj lokaciju…</string>
    <string name="remove_location">Ukloni lokaciju…</string>
    <string name="remove_image">Ukloni sliku…</string>
    <string name="remove_images">Ukloni slike…</string>
    <string name="advert_fetch_fail">Neuspješno dohvaćanje oglasa</string>
    <string name="pet_fetch_fail">Neuspješno dohvaćanje ljubimca</string>
    <string name="shelter_fetch_fail">Neuspješno dohvaćanje skloništa</string>
    <string name="comment_post_fail">Neuspješno dodavanje komentara</string>
    <string name="picture_change_instruction">Uslikajte novu fotografiju ili izaberite postojeću iz galerije</string>
    <string name="speciesText">Vrsta: </string>
    <string name="statusText">Status: </string>
    <string name="nameText">Ime: </string>
    <string name="select_method">Izaberite metodu…</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galerija</string>
    <string name="colorText">Boja: </string>
    <string name="ageText">Starost: </string>
    <string name="locationLostText">Lokacija: </string>
    <string name="location">Vidi lokaciju… </string>
    <string name="dateLostText">Datum: </string>
    <string name="descriptionText">Opis: </string>
    <string name="shelterNameText">Naziv: </string>
    <string name="shelterText">Informacije o skloništu: </string>
    <string name="shelterPhoneText">Mobitel: </string>
    <string name="petImageDescription">Slika ljubimca</string>
    <string name="shelterEmail">E-mail: </string>
    <string name="pretrazi">Pretraži</string>
    <string name="content_description_pretrazi">Pretraži oglase po ljubimcima</string>
    <string name="dodaj_oglas">Dodaj oglas</string>
    <string name="closeButtonImageDescription">Gumb za izlaženje</string>
    <string name="get_pets_failed">Neuspješno dohvaćanje oglasa</string>
    <string name="content_description_user_icon">Prikaži korisničke detalje</string>
    <string name="izgubljeni">Izgubljeni</string>
    <string name="content_description_izgubljeni">Prikaži samo izgubljene ljubimce</string>
    <string name="pretrazi_ljubimce">Pretraži ljubimce</string>
    <string name="pronadeni">Pronađeni</string>
    <string name="unesite_podatke_o_zeljenom_ljubimcu">Unesite podatke o željenom ljubimcu</string>
    <string name="ime">Ime</string>
    <string name="vrsta">Vrsta</string>
    <string name="boja">Boja</string>
    <string name="cat_paw">Cat paw</string>
    <string name="starost">Starost</string>
    <string name="_0">0</string>
    <string name="izgubljen_od">Odaberite datum nestanka</string>
    <string name="opis">Opis ljubimca</string>
    <string name="po_ljubimcu">Po ljubimcu</string>
    <string name="pretrazi_po_korisniku">Po korisniku</string>
    <string name="pretrazi_po_sklonistu">Po skloništu</string>
    <string name="prekinutoTrazenje">Potraga prekinuta</string>
    <string name="uSklonistu">U skloništu</string>
    <string name="content_description_pronadeni">Prikaži samo pronađene ljubimce</string>
    <string name="no_pets">Ne možemo pronaći nikakve nestale ljubimce</string>
    <string name="ukloni_filter">Ukloni filter</string>
    <string name="pokusaj_opet">Pokušaj opet</string>
    <string name="mojiOglasi">Moji Oglasi</string>
    <string name="filtriranje_po_ljubimcu">Filtriranje po ljubimcu</string>
    <string name="uginuli">Uginuli</string>
    <string name="edit_advert">Uredi oglas…</string>
    <string name="delete_advert">Izbriši oglas…</string>
    <string name="add_to_shelter">Dodaj u sklonište…</string>
    <string name="odustani">Odustani</string>
    <string name="izbrisi">Izbriši</string>
    <string name="potvrda_brisanja_oglasa">Jeste li sigurni da želite obrisati oglas?</string>
    <string name="brisanje_oglasa">Brisanje oglasa</string>
    <string name="sklonista">Registrirana skloništa</string>
    <string name="svaSklonista">Sva skloništa</string>
    <string name="no_shelters">Ne možemo pronaći niti jedno sklonište</string>
    <string name="pet_name">Ime</string>
    <string name="pet_color">Boja</string>
    <string name="pet_age">Dob u godinama</string>
    <string name="advert">Oglas za ljubimca</string>
    <string name="post_text">Objavi oglas</string>
    <string name="description_text">Opis oglasa</string>
    <string name="species_text">Vrsta</string>
    <string name="category_text">Kategorija</string>
    <string name="shelter_text">U skloništu</string>
    <string name="date">Datum</string>
    <string name="picture_text">Dodaj sliku</string>
    <string name="advert_unsuccessful">Neuspješno dodavanje oglasa.</string>
    <string name="access_token_expired">Sjednica istekla, molimo vas ponovno se prijavite</string>
</resources>