<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/kategorije">
        <item
            android:id="@+id/izgubljeni"
            android:title="@string/izgubljeni"
            android:contentDescription="@string/content_description_izgubljeni"
            />
        <item
            android:id="@+id/pronadeni"
            android:title="@string/pronadeni"
            />
        <!--*
        * Prekinuto traženje
        * U skloništu
        * Uginuli-->
    </group>

    <group
        android:id="@+id/search_group">
        <item
            android:id="@+id/serach_submenu"
            android:title="@string/pretrazi"
            android:icon="@drawable/search_icon">
            <menu>
                    <!--android:icon="@drawable/cat_footprint"-->
                <item
                    android:id="@+id/pojedini_ljubimci"
                    android:title="@string/pojedini_ljubimci"
                    android:contentDescription="@string/content_description_pretrazi"
                    />
                    <!--android:icon="@drawable/icons_user"-->
                <item
                    android:id="@+id/trazi_po_korisniku"
                    android:title="@string/pretrazi_korisnike"
                    android:contentDescription="@string/content_description_pretrazi"
                    />
            </menu>
        </item>
    </group>
</menu>