<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/margin_12dp"
    android:background="@color/white">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/surface_container"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/nestali_ljubimci"
            app:navigationIcon="@drawable/sharp_arrow_back"
            app:titleCentered="true"
            app:titleTextColor="@color/black" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_recycler"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:layout_marginHorizontal="@dimen/margin_12dp"
                android:layout_marginTop="24sp"
                android:orientation="horizontal"
                app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager" />

            <TextView
                android:id="@+id/infoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:text="@string/basic_info"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingVertical="4dp"
                android:background="@drawable/info_bacground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/speciesText"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24dp"
                    android:text="@string/speciesText"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/petSpeciesValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_24dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:text="Pudlica" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24dp"
                    android:text="@string/nameText"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/petNameValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_24dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:text="Đuro" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:background="@drawable/info_bacground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/colorText"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24dp"
                    android:text="@string/colorText"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/pet_color_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_24dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:text="svijetlo crven sa zelenim točkicama" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ageText"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24dp"
                    android:text="@string/ageText"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/pet_age_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_24dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:text="15 godina" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:background="@drawable/info_bacground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/petDescriptionText"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24dp"
                    android:text="@string/descriptionText"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/petDescriptionValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_24dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:text="Izgubljen pas kod otoka Mladosti na jarunu, otrčao za zgodnom pudlicom i nije se vratio" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/shelterDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/shelterText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24dp"
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:text="@string/shelterText"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="4dp"
                    android:paddingVertical="4dp"
                    android:background="@drawable/info_bacground"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/shelterNameText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_24dp"
                        android:text="@string/shelterNameText"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/shelterNameValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_24dp"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        tools:text="Sklonište Knežija" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/shelterEmailText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_24dp"
                        android:text="@string/shelterEmail"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/shelterEmailValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_24dp"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        tools:text="skloniste@skloniste.s" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="4dp"
                    android:background="@drawable/info_bacground"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/shelterPhoneText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_24dp"
                        android:text="@string/shelterPhoneText"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/shelterPhoneValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_24dp"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        tools:text="000 000 000" />
                </LinearLayout>

                <TextView
                    android:id="@+id/comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_24dp"
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:text="@string/comments"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/commentRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/comment_card" />

                <TextView
                    android:id="@+id/noCommentsMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/size40dp"
                    android:text="@string/no_comments_yet"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:visibility="invisible" />

            </LinearLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/commentButtonCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:cardBackgroundColor="@color/transparentColor"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/commentButton"
            style="@style/CustomButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:text="@string/write_a_comment" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>